add project images & styles

--- a/src/template.html
+++ b/src/template.html
@@ -22,12 +22,15 @@
         <div class="entry__meta">
           <h2 class="entry__title">Weatherio</h2>
           <h3 class="entry__desc">
-            Forecasting the future, one weather update at a time
+            Forecasting the future, one weather update at a time -
             <span></span> your reliable companion through rain or shine
           </h3>
         </div>
         <figure class="entry__media">
-          <img src="" alt="Weather App created by Alan Dylewski" />
+          <img
+            src="./assets/images/weatherio.png"
+            alt="Weather App created by Alan Dylewski"
+          />
         </figure>
       </section>
 
@@ -39,7 +42,10 @@
           </h3>
         </div>
         <figure class="entry__media">
-          <img src="" alt="ToDo App created by Alan Dylewski" />
+          <img
+            src="./assets/images/pixeldo.png"
+            alt="ToDo App created by Alan Dylewski"
+          />
         </figure>
       </section>
 
@@ -51,7 +57,10 @@
           </h3>
         </div>
         <figure class="entry__media">
-          <img src="" alt="Restaurant Webpage created by Alan Dylewski" />
+          <img
+            src="./assets/images/wakandine.png"
+            alt="Restaurant Webpage created by Alan Dylewski"
+          />
         </figure>
       </section>
     </main>
