fix project img positioning

--- a/src/template.html
+++ b/src/template.html
@@ -27,10 +27,12 @@
           </h3>
         </div>
         <figure class="entry__media">
-          <img
-            src="./assets/images/weatherio.png"
-            alt="Weather App created by Alan Dylewski"
-          />
+          <a href="https://dylewskii.github.io/weather-app/">
+            <img
+              src="./assets/images/weatherio.png"
+              alt="Weather App created by Alan Dylewski"
+            />
+          </a>
         </figure>
       </section>
 
@@ -42,10 +44,12 @@
           </h3>
         </div>
         <figure class="entry__media">
-          <img
-            src="./assets/images/pixeldo.png"
-            alt="ToDo App created by Alan Dylewski"
-          />
+          <a href="https://dylewskii.github.io/weather-app/">
+            <img
+              src="./assets/images/pixeldo.png"
+              alt="ToDo App created by Alan Dylewski"
+            />
+          </a>
         </figure>
       </section>
 
@@ -57,10 +61,12 @@
           </h3>
         </div>
         <figure class="entry__media">
-          <img
-            src="./assets/images/wakandine.png"
-            alt="Restaurant Webpage created by Alan Dylewski"
-          />
+          <a href="https://dylewskii.github.io/weather-app/">
+            <img
+              src="./assets/images/wakandine.png"
+              alt="Restaurant Webpage created by Alan Dylewski"
+            />
+          </a>
         </figure>
       </section>
     </main>
